Updated entire tabs package to use properties file for all tet strings displayed

--- a/src/ooga/view/tabs/TabStringResources.properties
+++ b/src/ooga/view/tabs/TabStringResources.properties
@@ -2,3 +2,14 @@ players = Players
 properties = Properties
 rules = Rules
 tab = Tab
+
+
+propertiesTabTitle = Available Properties
+rulesTabTitle = Game Rules
+playersTabTitle = Player Assets 
+
+stringException = Rules tab only accepts Strings
+
+player = Player 
+balance = Balance: $
+owns = , Owns:
