design: replacing strings with properties getter methods

--- a/src/resources/Default.properties
+++ b/src/resources/Default.properties
@@ -14,3 +14,44 @@ Player=Player
 BoardType=Board Type
 Error=Error
 Ok=OK
+Yes=Yes
+No=No
+freeparking=Landed on Free Parking
+jailprompt1=Would you like to use your Get Out of Jail Free card?
+jailprompt2=Would you like to bail out of jail?
+jailprompt3=Visiting jail
+cardtype1=Chance
+cardtype2=Community
+cardprompt1=Advance to \"GO\". (Collect $200)
+cardprompt2=Advance to Illinois Avenue. If you pass Go, collect $200.
+cardprompt3=Advance to St. Charles Place. If you pass Go, collect $200.
+cardprompt4=Advance token to nearest Utility. If unowned, you may buy it from the Bank. If owned, throw dice and pay owner a total 10 times the amount thrown.
+cardprompt5=Advance token to the nearest Railroad and pay owner twice the rental to which he/she is otherwise entitled. If Railroad is unowned, you may buy it from the Bank.
+cardprompt6=Bank pays you dividend of $50.
+cardprompt7=Get out of Jail Free. This card may be kept until needed, or traded/sold.
+cardprompt8=Go Back Three Spaces.
+cardprompt9=Go to Jail. Go directly to Jail. Do not pass GO, do not collect $200.
+cardprompt10=Make general repairs on all your property: For each house pay $25, For each hotel $125.
+cardprompt11=Pay poor tax of $15
+cardprompt12=Take a trip to Reading Railroad. If you pass Go, collect $200.
+cardprompt13=Take a walk on the Boardwalk. Advance token to Boardwalk.
+cardprompt14=You have been elected Chairman of the Board. Pay each player $50.
+cardprompt15=Your building loan matures. Receive $150.
+cardprompt16=You have won a crossword competition. Collect $100.
+cardprompt17=Bank error in your favor. Collect $200.
+cardprompt18=Doctor's fees. Pay $50.
+cardprompt19=From sale of stock you get $50.
+cardprompt20=Grand Opera Night. Collect $50 from every player for opening night seats.
+cardprompt21=Holiday Fund matures. Receive $100.
+cardprompt22=Income tax refund. Collect $20.
+cardprompt23=It is your birthday. Collect $10 from every player.
+cardprompt24=Life insurance matures. Collect $100
+cardprompt25=Hospital Fees. Pay $50.
+cardprompt26=School Fees. Pay $50.
+cardprompt27=Receive $25 consultancy fee.
+cardprompt28=You are assessed for street repairs: Pay $40 per house and $200 per hotel you own.
+cardprompt29=You have won second prize in a beauty contest. Collect $10.
+cardprompt30=You inherit $100.
+
+
+
