added player prompts to properties file

--- a/src/resources/Default.properties
+++ b/src/resources/Default.properties
@@ -52,6 +52,8 @@ cardprompt27=Receive $25 consultancy fee.
 cardprompt28=You are assessed for street repairs: Pay $40 per house and $200 per hotel you own.
 cardprompt29=You have won second prize in a beauty contest. Collect $10.
 cardprompt30=You inherit $100.
+playerprompt1=You've paid the bank $
+playerprompt2=You've paid $50 for bail.
 
 
 
