added loadgame error message

--- a/src/resources/Errors.properties
+++ b/src/resources/Errors.properties
@@ -1,2 +1,4 @@
 InvalidTile = Invalid Tile
 NullPlayer=You must enter players
+Unknown= Something went wrong...
+LoadGame=Error loading Monopoly Board
